# interactive-templates

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  justfile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  requirements.unit.in  requirements.unit.txt  smush.py  version
.github/: dependabot.yml
.github/workflows/: create-job-server-pr.yml  main.yml
docs/adr/: 0001-manually-approve-dependabot-changes.md
interactive_templates/: __init__.py  create.py  dates.py  fixtures.py  render.py
interactive_templates/schema/: __init__.py  v2.py
interactive_templates/templates/: README.md.tmpl
interactive_templates/templates/v2/: project.yaml.tmpl
interactive_templates/templates/v2/analysis/: code_variables.py  demographics.py  event_counts.py  event_variables.py  measures.py  measures_weekly.py  plot_measures.py  render_report.py  report_template.html  report_utils.py  study_definition.py  study_definition_end.py  top_5.py  utilities.py
interactive_templates/templates/v2/tests/: test_event_counts.py  test_measures.py  test_report_utils.py  test_top_5.py
reports/codelist/: __init__.py  project.yaml.tmpl
reports/codelist/analysis/: generate_measures.py  study_utils.py
reports/v2/: project.yaml.tmpl
reports/v2/analysis/: create_notebook.py  demographics.py  populations.py  report_utils.py  study_definition.py.tmpl  study_definition_ethinicity.py  top_5.py.tmpl
templates/v2/: project.yaml.tmpl
templates/v2/analysis/: measures.py  render_report.py  report_template.html  study_definition.py  study_definition.py.tmpl
templates/v2/tests/: conftest.py  test_measures.py
tests/: conftest.py  test_create.py  test_dates.py  test_measures.py  test_packaging.py  test_render_cli.py  test_v2.py
