[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive_templates"
description = "OpenSAFELY Interactive Templates"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["jinja2", "attrs", "requests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["interactive_templates*"]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [
  ".venv/*",
]

[tool.coverage.report]
fail_under = 0
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "htmlcov",
  "rendered",
  "venv",
]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.per-file-ignores]
"tests/test_measures.py" = ["E402"]
